src/objects/LogConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>DynamicGroupIdentifierObjectName__c</fullName>
        <label>Dynamic Group Identifier Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DynamicGroupIdentifier__c</fullName>
        <description>An object field name that is used to dynamically extract  the Grouping Identifier from the contents of the data arriving at this step</description>
        <inlineHelpText>An object field name that is used to dynamically extract  the Grouping Identifier from the contents of the data arriving at this step</inlineHelpText>
        <label>Dynamic Group Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StaticGroupIdentifier__c</fullName>
        <description>Enter any static business key (eg INVOICE, PAYSLIP, etc) to  describe the grouping.  Alternatively ,leave blank  to enable a system generated identifier.</description>
        <inlineHelpText>Enter any static business key (eg INVOICE, PAYSLIP, etc) to  describe the grouping.  Alternatively ,leave blank  to enable a system generated identifier.</inlineHelpText>
        <label>Static Group Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Log Configuration</label>
    <nameField>
        <label>What does this step do?</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>